--- a/AppointmentScheduler/Views/Shared/_AddEditAppointment.cshtml
+++ b/AppointmentScheduler/Views/Shared/_AddEditAppointment.cshtml
@@ -3,7 +3,15 @@
         <div class="modal-content">
             <form id="appointmentForm" autocomplete="off" novalidate="novalidate">
                 <div class="modal-header">
-                    <h4 class="modal-title">Add/Edit Appointment</h4>
+                    @if (User.IsInRole(AppointmentScheduler.Utilities.Helper.Admin))
+                    {
+
+                        <h4 class="modal-title">Add/Edit Appointment</h4>
+                    }
+                    else
+                    {
+                        <h4 class="modal-title">Appointment Details</h4>
+                    }
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
@@ -14,10 +22,38 @@
                         <label for="description">Description</label>
                         <textarea type="text" class="form-control" id="description"></textarea>
                     </div>
-                    <div class="form-group">
-                        <label for="title">Select Patient</label>
-                        <select id="patientId" asp-items="@(new SelectList(ViewBag.PatientList,"Id","Name"))" class="form-control"></select>
-                    </div>
+                    @if (User.IsInRole(AppointmentScheduler.Utilities.Helper.Admin))
+                    {
+                        <div class="form-group">
+                            <label for="title">Select Patient</label>
+                            <select id="patientId" asp-items="@(new SelectList(ViewBag.PatientList, "Id", "Name"))" class="form-control"></select>
+                        </div>
+                    }
+                    else
+                    {
+                        @if (User.IsInRole(AppointmentScheduler.Utilities.Helper.Doctor))
+                        {
+                            <div class="form-group">
+                                <label for="lblPatientName">Patient Name</label>
+                                <label class="form-control" disabled id="lblPatientName" />
+                            </div>
+                            <div class="form-group">
+                                <label for="lblStatus">Status</label>
+                                <label class="form-control" disabled id="lblStatus" />
+                            </div>
+                        }
+                        @if (User.IsInRole(AppointmentScheduler.Utilities.Helper.Patient))
+                        {
+                            <div class="form-group">
+                                <label for="lblDoctorName">Doctor Name</label>
+                                <label class="form-control" disabled id="lblDoctorName" />
+                            </div>
+                            <div class="form-group">
+                                <label for="lblStatus">Status</label>
+                                <label class="form-control" disabled id="lblStatus" />
+                            </div>
+                        }
+                    }
                     <div class="form-group">
                         <label for="appointmentDate">Start Date Time</label>
                         <input class="form-control" id="appointmentDate" />
@@ -30,7 +66,17 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" onclick="onCloseModal();">Close</button> &nbsp;
-                    <button type="button" id="btnSubmit" class="btn btn-success" onclick="onSubmitForm();">Submit</button>
+                    @if (User.IsInRole(AppointmentScheduler.Utilities.Helper.Admin))
+                    {
+                        <button type="button" id="btnSubmit" class="btn btn-success" onclick="onSubmitForm();">Submit</button>
+                        <button type="button" id="btnDelete" class="btn btn-danger" onclick="Confirmation();">Delete</button>
+                    }
+
+                    @if (User.IsInRole(AppointmentScheduler.Utilities.Helper.Doctor))
+                    {
+                        <button type="button" id="btnConfirm" class="btn btn-success" onclick="onConfirm();">Confirm</button>
+                        <button type="button" id="btnDelete" class="btn btn-danger" onclick="onDeleteAppointment();">Delete</button>
+                    }
                 </div>
             </form>
         </div>
